Release date: TBA

* Fix ability to detect .py modules inside PATH directories on Windows
  described by a UNC path with a trailing backslash (`\`)
    - Example: modutils.modpath_from_file(filename=r"\\Mac\Code\tests\test_resources.py", path=["\\mac\code\"]) == ['tests', 'test_resources']

* Fix ``random.sample`` inference crash when sequence contains uninferable elements.

  Closes #2518

What's New in astroid 4.0.3?
============================
Release date: 2026-01-03

* Fix inference of ``IfExp`` (ternary expression) nodes to avoid prematurely narrowing
  results in the face of inference ambiguity.

  Closes #2899

* Fix base class inference for dataclasses using the PEP 695 typing syntax.

  Refs pylint-dev/pylint#10788


What's New in astroid 4.0.2?
============================
Release date: 2025-11-09

* Handle FunctionDef blockstart_tolineno edge cases correctly.

  Refs #2880

* Add ``HTTPMethod`` enum support to brain module for Python 3.11+.

  Refs pylint-dev/pylint#10624
  Closes #2877

What's New in astroid 4.0.1?
============================
Release date: 2025-10-11

* Suppress ``SyntaxWarning`` for invalid escape sequences and return in finally on
  Python 3.14 when parsing modules.

* Assign ``Import`` and ``ImportFrom`` nodes to module locals if used with ``global``.

  Closes pylint-dev/pylint#10632


What's New in astroid 4.0.0?
============================
Release date: 2025-10-05

* Support constraints from ternary expressions in inference.

  Closes pylint-dev/pylint#9729

* Handle deprecated `bool(NotImplemented)` cast in const nodes.

* Add support for boolean truthiness constraints (`x`, `not x`) in inference.

  Closes pylint-dev/pylint#9515

* Fix false positive `invalid-name` on `attrs` classes with `ClassVar` annotated variables.

  Closes pylint-dev/pylint#10525

* Prevent crash when parsing deeply nested parentheses causing MemoryError in python's built-in ast.

  Closes #2643
