@@ -4,6 +4,7 @@
 
 from __future__ import annotations
 
+import inspect
 import random
 
 from astroid import nodes
@@ -30,11 +31,19 @@ def _clone_node_with_lineno(node, parent, lineno):
         "end_col_offset": node.end_col_offset,
     }
     postinit_params = {param: getattr(node, param) for param in _astroid_fields}
-    if other_fields:
-        init_params.update({param: getattr(node, param) for param in other_fields})
+
+    valid_init_params = set(inspect.signature(cls.__init__).parameters)
+    for param in other_fields:
+        if param in valid_init_params:
+            init_params[param] = getattr(node, param)
+
     new_node = cls(**init_params)
     if hasattr(node, "postinit") and _astroid_fields:
         new_node.postinit(**postinit_params)
+
+    for param in other_fields:
+        if param not in valid_init_params:
+            setattr(new_node, param, getattr(node, param))
     return new_node
 
 
